hello-world-cd/templates/deployment-free.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-free
  labels:
    name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: myapp
  template:
    metadata:
      name: myapp
      labels:
        name: myapp
        version: free
    spec:
      containers:
      - name: nodeweb-container
        image: palakollu145/nodeweb:free
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      imagePullSecrets: 
      - name: hello-world-rest-secret
