hello-world-cd/templates/deployment-paid-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-paid-canery
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      app: myapp
      labels:
        app: myapp
        version: paidcanery
    spec:
      containers:
      - name: nodeweb-container
        image: palakollu145/nodeweb:paidcanery
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      imagePullSecrets: 
      - name: hello-world-rest-secret
