hello-world-cd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeweb-service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 5000
      targetPort: 5000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30002
