hello-world-cd/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-vs
spec:
  gateways:
  - istio-ingressgateway.istio-system.svc.cluster.local
  hosts:
  - myapp-service.deploy.svc.cluster.local
 # Copy the value in the gateway hosts - usually a Domain Name
  http:
  - match:
    - headers:
        subscriptionType:
          exact: free
    route: # THEN
    - destination:
        host: myapp-service
        subset: free
      weight: 50
    - destination:
        host: myapp-service
        subset: freecanery
      weight: 50
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: myapp-service
        subset: paid
      weight: 50
    - destination:
        host: myapp-service
        subset: paidcanery
      weight: 50
